# rust-webapp

./: Cargo.toml  Procfile  RustConfig
migrations/2018-09-11-144242_create_widgets/: down.sql  up.sql
src/: main.rs  schema.rs
