[package]
name = "webapp"
version = "0.1.0"
authors = ["Stephen Olsen <steve.olsen@gmail.com>"]

[dependencies]
error-chain = "0.12.0"
actix = "0.7.4"
actix-web = "0.7.4"
diesel = { version = "1.3.2", features = ["postgres", "r2d2"] }
dotenv = "0.9.0"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"